--- a/template/core-dist/src/assets/scss/_cards.scss
+++ b/template/core-dist/src/assets/scss/_cards.scss
@@ -54,11 +54,10 @@ md-card.widget {
   p.counter {
     font-weight: 100;
     font-size: 55px;
-    line-height: 56px;
-    margin: 0;
+    margin: auto;
   }
   p.description {
     margin: 0;
-    text-align: right;
+    font-size: 20px;
   }
 }
