--- a/template/core-dist/src/app/pages/search-page/search.component.html
+++ b/template/core-dist/src/app/pages/search-page/search.component.html
@@ -1,7 +1,7 @@
 <div class="search__search-box">
   <md-card>
     <md-card-content>
-      <md-input>
+      <md-input value="{{searchTerm}}">
         <md-icon md-prefix>search</md-icon>
       </md-input>
       <button class="search__search-box__button--search" md-raised-button color="primary">Search</button>
