--- a/template/core-dist/src/app/pages/customers-page/customers.component.html
+++ b/template/core-dist/src/app/pages/customers-page/customers.component.html
@@ -1,33 +1,39 @@
-<button md-fab class="entity-index__button--add"> <md-icon>add</md-icon></button>
+<md-card class="entity-index__card">
+  <md-card-title class="entity-index__card__title"> <span>Customer Index</span> </md-card-title>
+  <md-card-content class="entity-index__card__content">
+    <button md-raised-button color="primary" (click)="addEntity()">New Customer</button>
 
-<div class="entity-index__search">
-  <md-input placeholder="search"></md-input>
-  <button md-raised-button color="primary">search</button>
-</div>
+    <div class="entity-index__search">
+      <md-input placeholder="search"></md-input>
+      <button md-raised-button color="primary">search</button>
+    </div>
 
-<table class="highlight">
-  <thead class="entity-index__table__header">
-  <tr>
-    <th data-field="firstName">First Name</th>
-    <th data-field="lastName">Last Name</th>
-    <th data-field="city">City</th>
-    <th data-field="country">Country</th>
-    <th>Actions</th>
-  </tr>
-  </thead>
+    <table class="entity-index__table highlight">
+      <thead class="entity-index__table__header">
+      <tr>
+        <th data-field="firstName">First Name <md-icon>keyboard_arrow_down</md-icon> </th>
+        <th data-field="lastName">Last Name <md-icon>keyboard_arrow_down</md-icon> </th>
+        <th data-field="state">State <md-icon>keyboard_arrow_down</md-icon> </th>
+        <th data-field="city">City <md-icon>keyboard_arrow_down</md-icon> </th>
+        <th>Actions</th>
+      </tr>
+      </thead>
 
-  <tbody>
-  <tr *ngFor="let customer of customers">
-    <td>{{customer.firstName}}</td>
-    <td>{{customer.lastName}}</td>
-    <td>{{customer.address.city}}</td>
-    <td>{{customer.address.country}}</td>
-    <td>
-      <md-icon class="entity-index__table__body__action" (click)="viewEntity(customer.id)">visibility</md-icon>
-      <md-icon class="entity-index__table__body__action" (click)="updateEntity(customer.id)">mode_edit</md-icon>
-      <md-icon class="entity-index__table__body__action" (click)="deleteEntity(customer.id)">delete</md-icon>
-    </td>
-  </tr>
-  </tbody>
+      <tbody>
+      <tr *ngFor="let customer of customers">
+        <td>{{customer.firstName}}</td>
+        <td>{{customer.lastName}}</td>
+        <td>{{customer.address.state}}</td>
+        <td>{{customer.address.city}}</td>
+        <td>
+          <md-icon class="entity-index__table__body__action" (click)="viewEntity(customer.id)">visibility</md-icon>
+          <md-icon class="entity-index__table__body__action" (click)="updateEntity(customer.id)">mode_edit</md-icon>
+          <md-icon class="entity-index__table__body__action" (click)="deleteEntity(customer.id)">delete</md-icon>
+        </td>
+      </tr>
+      </tbody>
 
-</table>
+    </table>
+  </md-card-content>
+</md-card>
+
