--- a/template/core-dist/src/app/pages/credit-cards-page/credit-card-view/credit-card-view.component.html
+++ b/template/core-dist/src/app/pages/credit-cards-page/credit-card-view/credit-card-view.component.html
@@ -1,18 +1,23 @@
-<md-card *ngIf="creditCard">
-  <md-card-title>Credit Card</md-card-title>
-  <md-card-content>
-    <md-input disabled placeholder="CC Number" value="{{creditCard.ccnumber}}"></md-input>
-    <md-input disabled placeholder="Expiration" value="{{creditCard.expiration}}"></md-input>
-    <md-input disabled placeholder="CCV" value="{{creditCard.ccv}}"></md-input>
-    <md-input disabled placeholder="Name" value="{{creditCard.name}}"></md-input>
+<md-card class="entity-view__card" *ngIf="entity">
+  <md-card-title class="entity-view__card__title"> <span>{{mode}} Credit Card</span> </md-card-title>
+  <md-card-content class="entity-view__card__content">
+    <md-input [disabled]="viewMode" placeholder="Name" [(ngModel)]="entity.name"></md-input>
+    <md-input [disabled]="viewMode" placeholder="CC Number" [(ngModel)]="entity.ccnumber"></md-input>
+    <md-input [disabled]="viewMode" placeholder="Expiration" [(ngModel)]="entity.expiration"></md-input>
+    <md-input [disabled]="viewMode" placeholder="CCV" [(ngModel)]="entity.ccv"></md-input>
 
-    <div class="content__block__first">
+    <div>
       <md-card-subtitle>Address</md-card-subtitle>
-      <md-input disabled placeholder="Line 1" value="{{creditCard.address.line1}}"></md-input>
-      <md-input disabled placeholder="Line 2" value="{{creditCard.address.line2}}"></md-input>
-      <md-input disabled placeholder="City" value="{{creditCard.address.city}}"></md-input>
-      <md-input disabled placeholder="Zip" value="{{creditCard.address.state}}"></md-input>
-      <md-input disabled placeholder="State" value="{{creditCard.address.zip}}"></md-input>
+      <md-input [disabled]="viewMode" placeholder="Line 1" [(ngModel)]="entity.address.line1"></md-input>
+      <md-input [disabled]="viewMode" placeholder="Line 2" [(ngModel)]="entity.address.line2"></md-input>
+      <md-input [disabled]="viewMode" placeholder="City" [(ngModel)]="entity.address.city"></md-input>
+      <md-input [disabled]="viewMode" placeholder="Zip" [(ngModel)]="entity.address.state"></md-input>
+      <md-input [disabled]="viewMode" placeholder="State" [(ngModel)]="entity.address.zip"></md-input>
     </div>
   </md-card-content>
+  <md-card-actions align="end">
+    <button md-raised-button color="primary" *ngIf="addMode" (click)="saveEntity(entity)">Save</button>
+    <button md-raised-button color="primary" *ngIf="updateMode" (click)="updateEntity(entity)">Save</button>
+    <button md-raised-button color="primary" *ngIf="updateMode" (click)="cancelUpdate()">Cancel</button>
+  </md-card-actions>
 </md-card>
