--- a/template/core-dist/src/app/pages/credit-cards-page/credit-cards.component.html
+++ b/template/core-dist/src/app/pages/credit-cards-page/credit-cards.component.html
@@ -1,35 +1,41 @@
-<button md-fab class="entity-index__button--add"> <md-icon>add</md-icon></button>
+<md-card class="entity-index__card">
+  <md-card-title class="entity-index__card__title"> <span>Credit Card Index</span> </md-card-title>
+  <md-card-content class="entity-index__card__content">
+    <button md-raised-button color="primary" (click)="addEntity()">New Credit Card</button>
 
-<div class="entity-index__search">
-  <md-input placeholder="search"></md-input>
-  <button md-raised-button color="primary">search</button>
-</div>
+    <div class="entity-index__search">
+      <md-input placeholder="search"></md-input>
+      <button md-raised-button color="primary">search</button>
+    </div>
 
-<table class="highlight">
-  <thead class="entity-index__table__header">
-  <tr>
-    <th data-field="Name">Name</th>
-    <th data-field="Expiration">Expiration</th>
-    <th data-field="Country">Country</th>
-    <th data-field="State">State</th>
-    <th data-field="City">City</th>
-    <th>Actions</th>
-  </tr>
-  </thead>
+    <table class="entity-index__table highlight">
+      <thead class="entity-index__table__header">
+      <tr>
+        <th data-field="Name">Name <md-icon>keyboard_arrow_down</md-icon> </th>
+        <th data-field="Expiration">Expiration <md-icon>keyboard_arrow_down</md-icon> </th>
+        <th data-field="Country">Country <md-icon>keyboard_arrow_down</md-icon> </th>
+        <th data-field="State">State <md-icon>keyboard_arrow_down</md-icon> </th>
+        <th data-field="City">City <md-icon>keyboard_arrow_down</md-icon> </th>
+        <th>Actions</th>
+      </tr>
+      </thead>
 
-  <tbody>
-  <tr *ngFor="let creditCard of creditCards">
-    <td>{{creditCard.name}}</td>
-    <td>{{creditCard.expiration}}</td>
-    <td>{{creditCard.address.country}}</td>
-    <td>{{creditCard.address.state}}</td>
-    <td>{{creditCard.address.city}}</td>
-    <td>
-      <md-icon class="entity-index__table__body__action" (click)="viewEntity(creditCard.id)">visibility</md-icon>
-      <md-icon class="entity-index__table__body__action" (click)="updateEntity(creditCard.id)">mode_edit</md-icon>
-      <md-icon class="entity-index__table__body__action" (click)="deleteEntity(creditCard.id)">delete</md-icon>
-    </td>
-  </tr>
-  </tbody>
+      <tbody>
+      <tr *ngFor="let creditCard of creditCards">
+        <td>{{creditCard.name}}</td>
+        <td>{{creditCard.expiration}}</td>
+        <td>{{creditCard.address.country}}</td>
+        <td>{{creditCard.address.state}}</td>
+        <td>{{creditCard.address.city}}</td>
+        <td>
+          <md-icon class="entity-index__table__body__action" (click)="viewEntity(creditCard.id)">visibility</md-icon>
+          <md-icon class="entity-index__table__body__action" (click)="updateEntity(creditCard.id)">mode_edit</md-icon>
+          <md-icon class="entity-index__table__body__action" (click)="deleteEntity(creditCard.id)">delete</md-icon>
+        </td>
+      </tr>
+      </tbody>
 
-</table>
+    </table>
+  </md-card-content>
+</md-card>
+
