--- a/template/core-dist/src/app/pages/smtp-providers-page/smtp-providers.component.html
+++ b/template/core-dist/src/app/pages/smtp-providers-page/smtp-providers.component.html
@@ -1,35 +1,39 @@
-<button md-fab class="entity-index__button--add" (click)="addEntity()"> <md-icon>add</md-icon></button>
+<md-card class="entity-index__card">
+  <md-card-title class="entity-index__card__title"> <span>SMTP Provider Index</span> </md-card-title>
+  <md-card-content class="entity-index__card__content">
+    <button md-raised-button color="primary" (click)="addEntity()">New SMTP Provider</button>
 
-<div class="entity-index__search">
-  <md-input placeholder="search"></md-input>
-  <button md-raised-button color="primary">search</button>
-</div>
+    <div class="entity-index__search">
+      <md-input placeholder="search"></md-input>
+      <button md-raised-button color="primary">search</button>
+    </div>
 
-<table class="highlight">
-  <thead class="entity-index__table__header">
-  <tr>
-    <th data-field="name">Name</th>
-    <th data-field="hostname">Hostname</th>
-    <th data-field="ip-address">IP Address</th>
-    <th data-field="username">Username</th>
-    <th data-field="port">Port</th>
-    <th>Actions</th>
-  </tr>
-  </thead>
+    <table class="entity-index__table highlight">
+      <thead class="entity-index__table__header">
+        <tr>
+          <th data-field="name">Name <md-icon>keyboard_arrow_down</md-icon> </th>
+          <th data-field="hostname">Hostname <md-icon>keyboard_arrow_down</md-icon> </th>
+          <th data-field="ip-address">IP Address <md-icon>keyboard_arrow_down</md-icon> </th>
+          <th data-field="username">Username <md-icon>keyboard_arrow_down</md-icon> </th>
+          <th data-field="port">Port <md-icon>keyboard_arrow_down</md-icon> </th>
+          <th>Actions</th>
+        </tr>
+      </thead>
 
-  <tbody>
-  <tr *ngFor="let smtpProvider of smtpProviders">
-    <td>{{smtpProvider.name}}</td>
-    <td>{{smtpProvider.hostname}}</td>
-    <td>{{smtpProvider.ipAddress}}</td>
-    <td>{{smtpProvider.hostname}}</td>
-    <td>{{smtpProvider.port}}</td>
-    <td>
-      <md-icon class="entity-index__table__body__action" (click)="viewEntity(smtpProvider.id)">visibility</md-icon>
-      <md-icon class="entity-index__table__body__action" (click)="updateEntity(smtpProvider.id)">mode_edit</md-icon>
-      <md-icon class="entity-index__table__body__action" (click)="deleteEntity(smtpProvider.id)">delete</md-icon>
-    </td>
-  </tr>
-  </tbody>
-
-</table>
+      <tbody>
+      <tr *ngFor="let smtpProvider of smtpProviders">
+        <td>{{smtpProvider.name}}</td>
+        <td>{{smtpProvider.hostname}}</td>
+        <td>{{smtpProvider.ipAddress}}</td>
+        <td>{{smtpProvider.hostname}}</td>
+        <td>{{smtpProvider.port}}</td>
+        <td>
+          <md-icon class="entity-index__table__body__action" (click)="viewEntity(smtpProvider.id)">visibility</md-icon>
+          <md-icon class="entity-index__table__body__action" (click)="updateEntity(smtpProvider.id)">mode_edit</md-icon>
+          <md-icon class="entity-index__table__body__action" (click)="deleteEntity(smtpProvider.id)">delete</md-icon>
+        </td>
+      </tr>
+      </tbody>
+    </table>
+  </md-card-content>
+</md-card>
