--- a/template/core-dist/src/app/pages/campaigns-page/campaigns.component.html
+++ b/template/core-dist/src/app/pages/campaigns-page/campaigns.component.html
@@ -1,31 +1,37 @@
-<button md-fab class="entity-index__button--add"> <md-icon>add</md-icon></button>
+<md-card class="entity-index__card">
+  <md-card-title class="entity-index__card__title"> <span>Campaign Index</span> </md-card-title>
+  <md-card-content class="entity-index__card__content">
+    <button md-raised-button color="primary" (click)="addEntity()">New Campaign</button>
 
-<div class="entity-index__search">
-  <md-input placeholder="search"></md-input>
-  <button md-raised-button color="primary">search</button>
-</div>
+    <div class="entity-index__search">
+      <md-input placeholder="search"></md-input>
+      <button md-raised-button color="primary">search</button>
+    </div>
 
-<table class="highlight">
-  <thead class="entity-index__table__header">
-  <tr>
-    <th data-field="id">Name</th>
-    <th data-field="numOfMerchProviders">Number of Merchant Providers</th>
-    <th data-field="numOfProdSchedules">Number of Product Schedules</th>
-    <th>Actions</th>
-  </tr>
-  </thead>
+    <table class="entity-index__table highlight">
+      <thead class="entity-index__table__header">
+        <tr>
+          <th data-field="id">Name <md-icon>keyboard_arrow_down</md-icon></th>
+          <th data-field="numOfMerchProviders">Number of Merchant Providers <md-icon>keyboard_arrow_down</md-icon></th>
+          <th data-field="numOfProdSchedules">Number of Product Schedules <md-icon>keyboard_arrow_down</md-icon></th>
+          <th>Actions</th>
+        </tr>
+      </thead>
 
-  <tbody>
-  <tr *ngFor="let campaign of campaigns">
-    <td>{{campaign.name}}</td>
-    <td>{{campaign.loadBalancer.merchantProviderConfigurations.length}}</td>
-    <td>{{campaign.productSchedules.length}}</td>
-    <td>
-      <md-icon class="entity-index__table__body__action" (click)="viewEntity(campaign.id)">visibility</md-icon>
-      <md-icon class="entity-index__table__body__action" (click)="updateEntity(campaign.id)">mode_edit</md-icon>
-      <md-icon class="entity-index__table__body__action" (click)="deleteEntity(campaign.id)">delete</md-icon>
-    </td>
-  </tr>
-  </tbody>
+      <tbody>
+        <tr *ngFor="let campaign of campaigns">
+          <td>{{campaign.name}}</td>
+          <td>{{campaign.loadBalancer.merchantProviderConfigurations.length}}</td>
+          <td>{{campaign.productSchedules.length}}</td>
+          <td>
+            <md-icon class="entity-index__table__body__action" (click)="viewEntity(campaign.id)">visibility</md-icon>
+            <md-icon class="entity-index__table__body__action" (click)="updateEntity(campaign.id)">mode_edit</md-icon>
+            <md-icon class="entity-index__table__body__action" (click)="deleteEntity(campaign.id)">delete</md-icon>
+          </td>
+        </tr>
+      </tbody>
 
-</table>
+    </table>
+  </md-card-content>
+</md-card>
+
