--- a/template/core-dist/src/app/pages/emails-page/email-view/email-view.component.html
+++ b/template/core-dist/src/app/pages/emails-page/email-view/email-view.component.html
@@ -1,19 +1,19 @@
-<md-card *ngIf="email">
-  <md-card-title>Email View</md-card-title>
-  <md-input disabled placeholder="Name" value="{{email.name}}"></md-input>
-  <md-input disabled placeholder="Subject" value="{{email.subject}}"></md-input>
-  <md-input disabled placeholder="Body" value="{{email.body}}"></md-input>
-  <md-input disabled placeholder="Type" value="{{email.type}}"></md-input>
+<md-card class="entity-view__card" *ngIf="entity">
+  <md-card-title class="entity-view__card__title"> <span>{{mode}} Email</span> </md-card-title>
+  <md-card-content class="entity-view__card__content">
+    <md-input [disabled]="viewMode" placeholder="Name" value="{{entity.name}}"></md-input>
+    <md-input [disabled]="viewMode" placeholder="Subject" value="{{entity.subject}}"></md-input>
+    <md-input [disabled]="viewMode" placeholder="Body" value="{{entity.body}}"></md-input>
+    <md-input [disabled]="viewMode" placeholder="Type" value="{{entity.type}}"></md-input>
 
-  <md-card-content>
-    <div class="content__block__first">
+    <div>
       <md-card-subtitle>SMTP Provider</md-card-subtitle>
-      <md-input disabled placeholder="Name" value="{{email.smtpProvider.name}}"></md-input>
-      <md-input disabled placeholder="Hostname" value="{{email.smtpProvider.hostname}}"></md-input>
-      <md-input disabled placeholder="IP Address" value="{{email.smtpProvider.ipAddress}}"></md-input>
-      <md-input disabled placeholder="Username" value="{{email.smtpProvider.username}}"></md-input>
-      <md-input disabled placeholder="Password" value="{{email.smtpProvider.password}}"></md-input>
-      <md-input disabled placeholder="Port" value="{{email.smtpProvider.port}}"></md-input>
+      <md-input disabled placeholder="Name" value="{{entity.smtpProvider.name}}"></md-input>
     </div>
   </md-card-content>
+  <md-card-actions align="end">
+    <button md-raised-button color="primary" *ngIf="addMode" (click)="saveEntity(entity)">Save</button>
+    <button md-raised-button color="primary" *ngIf="updateMode" (click)="updateEntity(entity)">Save</button>
+    <button md-raised-button color="primary" *ngIf="updateMode" (click)="cancelUpdate()">Cancel</button>
+  </md-card-actions>
 </md-card>
