--- a/template/core-dist/src/app/pages/emails-page/emails.component.html
+++ b/template/core-dist/src/app/pages/emails-page/emails.component.html
@@ -1,33 +1,38 @@
-<button md-fab class="entity-index__button--add"> <md-icon>add</md-icon></button>
+<md-card class="entity-index__card">
+  <md-card-title class="entity-index__card__title"> <span>Emails Index</span> </md-card-title>
+  <md-card-content class="entity-index__card__content">
+    <button md-raised-button color="primary" (click)="addEntity()">New Email</button>
 
-<div class="entity-index__search">
-  <md-input placeholder="search"></md-input>
-  <button md-raised-button color="primary">search</button>
-</div>
+    <div class="entity-index__search">
+      <md-input placeholder="search"></md-input>
+      <button md-raised-button color="primary">search</button>
+    </div>
 
-<table class="highlight">
-  <thead class="entity-index__table__header">
-  <tr>
-    <th data-field="name">Name</th>
-    <th data-field="subject">Subject</th>
-    <th data-field="type">Type</th>
-    <th data-field="smtpProviderName">SMTP Provider Name</th>
-    <th>Actions</th>
-  </tr>
-  </thead>
+    <table class="entity-index__table highlight">
+      <thead class="entity-index__table__header">
+        <tr>
+          <th data-field="name">Name <md-icon>keyboard_arrow_down</md-icon> </th>
+          <th data-field="subject">Subject <md-icon>keyboard_arrow_down</md-icon> </th>
+          <th data-field="type">Type <md-icon>keyboard_arrow_down</md-icon> </th>
+          <th data-field="smtpProviderName">SMTP Provider Name <md-icon>keyboard_arrow_down</md-icon> </th>
+          <th>Actions</th>
+        </tr>
+      </thead>
 
-  <tbody>
-  <tr *ngFor="let email of emails">
-    <td>{{email.name}}</td>
-    <td>{{email.subject}}</td>
-    <td>{{email.type}}</td>
-    <td>{{email.smtpProvider.name}}</td>
-    <td>
-      <md-icon class="entity-index__table__body__action" (click)="viewEntity(email.id)">visibility</md-icon>
-      <md-icon class="entity-index__table__body__action" (click)="updateEntity(email.id)">mode_edit</md-icon>
-      <md-icon class="entity-index__table__body__action" (click)="deleteEntity(email.id)">delete</md-icon>
-    </td>
-  </tr>
-  </tbody>
+      <tbody>
+        <tr *ngFor="let email of emails">
+          <td>{{email.name}}</td>
+          <td>{{email.subject}}</td>
+          <td>{{email.type}}</td>
+          <td>{{email.smtpProvider.name}}</td>
+          <td>
+            <md-icon class="entity-index__table__body__action" (click)="viewEntity(email.id)">visibility</md-icon>
+            <md-icon class="entity-index__table__body__action" (click)="updateEntity(email.id)">mode_edit</md-icon>
+            <md-icon class="entity-index__table__body__action" (click)="deleteEntity(email.id)">delete</md-icon>
+          </td>
+        </tr>
+      </tbody>
 
-</table>
+    </table>
+  </md-card-content>
+</md-card>
