--- a/template/core-dist/src/app/pages/merchant-providers-page/merchant-providers.component.html
+++ b/template/core-dist/src/app/pages/merchant-providers-page/merchant-providers.component.html
@@ -1,35 +1,41 @@
-<button md-fab class="entity-index__button--add" (click)="addEntity()"> <md-icon>add</md-icon></button>
+<md-card class="entity-index__card">
+  <md-card-title class="entity-index__card__title"> <span>Merchant Provider Index</span> </md-card-title>
+  <md-card-content class="entity-index__card__content">
+    <button md-raised-button color="primary" (click)="addEntity()">New Merchant Provider</button>
 
-<div class="entity-index__search">
-  <md-input placeholder="search"></md-input>
-  <button md-raised-button color="primary">search</button>
-</div>
+    <div class="entity-index__search">
+      <md-input placeholder="search"></md-input>
+      <button md-raised-button color="primary">search</button>
+    </div>
 
-<table class="highlight">
-  <thead class="entity-index__table__header">
-  <tr>
-    <th data-field="name">Name</th>
-    <th data-field="username">Username</th>
-    <th data-field="password">Password</th>
-    <th data-field="endpoint">Endpoint</th>
-    <th data-field="processor">Processor</th>
-    <th>Actions</th>
-  </tr>
-  </thead>
+    <table class="entity-index__table highlight">
+      <thead class="entity-index__table__header">
+        <tr>
+          <th data-field="name">Name <md-icon>keyboard_arrow_down</md-icon></th>
+          <th data-field="username">Username <md-icon>keyboard_arrow_down</md-icon></th>
+          <th data-field="password">Password <md-icon>keyboard_arrow_down</md-icon></th>
+          <th data-field="endpoint">Endpoint <md-icon>keyboard_arrow_down</md-icon></th>
+          <th data-field="processor">Processor <md-icon>keyboard_arrow_down</md-icon></th>
+          <th>Actions</th>
+        </tr>
+      </thead>
 
-  <tbody>
-  <tr *ngFor="let merchantProvider of merchantProviders">
-    <td>{{merchantProvider.name}}</td>
-    <td>{{merchantProvider.username}}</td>
-    <td>{{merchantProvider.password}}</td>
-    <td>{{merchantProvider.endpoint}}</td>
-    <td>{{merchantProvider.processor}}</td>
-    <td>
-      <md-icon class="entity-index__table__body__action" (click)="viewEntity(merchantProvider.id)">visibility</md-icon>
-      <md-icon class="entity-index__table__body__action" (click)="updateEntity(merchantProvider.id)">mode_edit</md-icon>
-      <md-icon class="entity-index__table__body__action" (click)="deleteEntity(merchantProvider.id)">delete</md-icon>
-    </td>
-  </tr>
-  </tbody>
+      <tbody>
+        <tr *ngFor="let merchantProvider of merchantProviders">
+          <td>{{merchantProvider.name}}</td>
+          <td>{{merchantProvider.username}}</td>
+          <td>{{merchantProvider.password}}</td>
+          <td>{{merchantProvider.endpoint}}</td>
+          <td>{{merchantProvider.processor}}</td>
+          <td>
+            <md-icon class="entity-index__table__body__action" (click)="viewEntity(merchantProvider.id)">visibility</md-icon>
+            <md-icon class="entity-index__table__body__action" (click)="updateEntity(merchantProvider.id)">mode_edit</md-icon>
+            <md-icon class="entity-index__table__body__action" (click)="deleteEntity(merchantProvider.id)">delete</md-icon>
+          </td>
+        </tr>
+      </tbody>
 
-</table>
+    </table>
+  </md-card-content>
+</md-card>
+
