--- a/template/core-dist/src/app/pages/load-balancers-page/load-balancers.component.html
+++ b/template/core-dist/src/app/pages/load-balancers-page/load-balancers.component.html
@@ -1,29 +1,34 @@
-<button md-fab class="entity-index__button--add" (click)="addEntity()"> <md-icon>add</md-icon></button>
+<md-card class="entity-index__card">
+  <md-card-title class="entity-index__card__title"> <span>Load Balancer Index</span> </md-card-title>
+  <md-card-content class="entity-index__card__content">
+    <button md-raised-button color="primary" (click)="addEntity()">New Load Balancer</button>
 
-<div class="entity-index__search">
-  <md-input placeholder="search"></md-input>
-  <button md-raised-button color="primary">search</button>
-</div>
+    <div class="entity-index__search">
+      <md-input placeholder="search"></md-input>
+      <button md-raised-button color="primary">search</button>
+    </div>
 
-<table class="highlight">
-  <thead class="entity-index__table__header">
-  <tr>
-    <th data-field="ID">id</th>
-    <th data-field="numberOfConfigurations">Number Of Merchant Provider Configurations</th>
-    <th>Actions</th>
-  </tr>
-  </thead>
+    <table class="entity-index__table highlight">
+      <thead class="entity-index__table__header">
+      <tr>
+        <th data-field="ID">ID <md-icon>keyboard_arrow_down</md-icon></th>
+        <th data-field="numberOfConfigurations">Number Of Merchant Provider Configurations <md-icon>keyboard_arrow_down</md-icon></th>
+        <th>Actions</th>
+      </tr>
+      </thead>
 
-  <tbody>
-  <tr *ngFor="let loadBalancer of loadBalancers">
-    <td>{{loadBalancer.id}}</td>
-    <td>{{loadBalancer.merchantProviderConfigurations.length}}</td>
-    <td>
-      <md-icon class="entity-index__table__body__action" (click)="viewEntity(loadBalancer.id)">visibility</md-icon>
-      <md-icon class="entity-index__table__body__action" (click)="updateEntity(loadBalancer.id)">mode_edit</md-icon>
-      <md-icon class="entity-index__table__body__action" (click)="deleteEntity(loadBalancer.id)">delete</md-icon>
-    </td>
-  </tr>
-  </tbody>
+      <tbody>
+      <tr *ngFor="let loadBalancer of loadBalancers">
+        <td>{{loadBalancer.id}}</td>
+        <td>{{loadBalancer.merchantProviderConfigurations.length}}</td>
+        <td>
+          <md-icon class="entity-index__table__body__action" (click)="viewEntity(loadBalancer.id)">visibility</md-icon>
+          <md-icon class="entity-index__table__body__action" (click)="updateEntity(loadBalancer.id)">mode_edit</md-icon>
+          <md-icon class="entity-index__table__body__action" (click)="deleteEntity(loadBalancer.id)">delete</md-icon>
+        </td>
+      </tr>
+      </tbody>
 
-</table>
+    </table>
+  </md-card-content>
+</md-card>
