--- a/template/core-dist/src/app/pages/users-page/user-view/user-view.component.html
+++ b/template/core-dist/src/app/pages/users-page/user-view/user-view.component.html
@@ -1,9 +1,14 @@
-<md-card *ngIf="user">
-  <md-card-title>User View</md-card-title>
-  <md-card-content>
-    <md-input disabled placeholder="Name" value="{{user.name}}"></md-input>
-    <md-input disabled placeholder="Auth0 ID" value="{{user.auth0Id}}"></md-input>
-    <md-input disabled placeholder="Email" value="{{user.email}}"></md-input>
-    <md-input disabled placeholder="Active" value="{{user.active}}"></md-input>
+<md-card class="entity-view__card" *ngIf="entity">
+  <md-card-title class="entity-view__card__title"> <span>{{mode}} User</span> </md-card-title>
+  <md-card-content class="entity-view__card__content">
+    <md-input [disabled]="viewMode" placeholder="Name" [(ngModel)]="entity.name"></md-input>
+    <md-input [disabled]="viewMode" placeholder="Auth0 ID" [(ngModel)]="entity.auth0Id"></md-input>
+    <md-input [disabled]="viewMode" placeholder="Email" [(ngModel)]="entity.email"></md-input>
+    <md-input [disabled]="viewMode" placeholder="Active" [(ngModel)]="entity.active"></md-input>
   </md-card-content>
+  <md-card-actions align="end">
+    <button md-raised-button color="primary" *ngIf="addMode" (click)="saveEntity(entity)">Save</button>
+    <button md-raised-button color="primary" *ngIf="updateMode" (click)="updateEntity(entity)">Save</button>
+    <button md-raised-button color="primary" *ngIf="updateMode" (click)="cancelUpdate()">Cancel</button>
+  </md-card-actions>
 </md-card>
