--- a/template/core-dist/src/app/pages/transactions-page/transaction-view/transaction-view.component.html
+++ b/template/core-dist/src/app/pages/transactions-page/transaction-view/transaction-view.component.html
@@ -1,65 +1,13 @@
-<md-card *ngIf="transaction">
-  <md-card-title>Transaction View</md-card-title>
-  <md-card-content>
-    <md-input disabled placeholder="Date" value="{{transaction.date}}"></md-input>
-    <md-input disabled placeholder="Amount" value="{{transaction.amount}}"></md-input>
-    <md-input disabled placeholder="Processor Response Message" value="{{transaction.processorResponse.message}}"></md-input>
-
-    <div class="content__block__first" *ngIf="transaction.rebill.id">
-      <md-card-subtitle>Rebill</md-card-subtitle>
-      <md-input disabled placeholder="Bill Date" value="{{transaction.rebill.billDate}}"></md-input>
-      <md-input disabled placeholder="Amount" value="{{transaction.rebill.amount}}"></md-input>
-
-      <div class="content__block__second">
-        <md-card-subtitle>Parent Session</md-card-subtitle>
-
-        <div class="content__block__third">
-          <md-card-subtitle>Customer</md-card-subtitle>
-          <md-input disabled placeholder="First Name" value="{{transaction.rebill.parentSession.customer.firstName}}"></md-input>
-          <md-input disabled placeholder="Last Name" value="{{transaction.rebill.parentSession.customer.lastName}}"></md-input>
-
-          <div class="content__block__fourth">
-            <md-card-subtitle>Address</md-card-subtitle>
-            <md-input disabled placeholder="Line 1" value="{{transaction.rebill.parentSession.customer.address.line1}}"></md-input>
-            <md-input disabled placeholder="Line 2" value="{{transaction.rebill.parentSession.customer.address.line2}}"></md-input>
-            <md-input disabled placeholder="City" value="{{transaction.rebill.parentSession.customer.address.city}}"></md-input>
-            <md-input disabled placeholder="State" value="{{transaction.rebill.parentSession.customer.address.state}}"></md-input>
-            <md-input disabled placeholder="Zip" value="{{transaction.rebill.parentSession.customer.address.zip}}"></md-input>
-          </div>
-        </div>
-      </div>
-
-      <div class="content__block__second">
-        <md-card-subtitle>Product Schedules</md-card-subtitle>
-        <ng-container *ngFor="let productSchedule of transaction.rebill.productSchedules">
-          <ng-container *ngFor="let schedule of productSchedule.schedules">
-          <div class="content__block__third">
-            <md-card-subtitle>Schedule</md-card-subtitle>
-            <md-input disabled placeholder="Price" value="{{schedule.price}}"></md-input>
-            <md-input disabled placeholder="Start" value="{{schedule.start}}"></md-input>
-            <md-input disabled placeholder="End" value="{{schedule.end}}"></md-input>
-            <md-input disabled placeholder="Period" value="{{schedule.period}}"></md-input>
-
-            <div class="content__block__fourth">
-              <md-card-subtitle>Product</md-card-subtitle>
-              <md-input disabled placeholder="Name" value="{{schedule.product.name}}"></md-input>
-              <md-input disabled placeholder="SKU" value="{{schedule.product.sku}}"></md-input>
-              <md-input disabled placeholder="Ship" value="{{schedule.product.ship}}"></md-input>
-              <md-input disabled placeholder="Shipping delay" value="{{schedule.product.shippingDelay}}"></md-input>
-
-              <div class="content__block__fifth">
-                <md-card-subtitle>Fulfillment Provider</md-card-subtitle>
-                <md-input disabled placeholder="Name" value="{{schedule.product.fulfillmentProvider.name}}"></md-input>
-                <md-input disabled placeholder="Provider" value="{{schedule.product.fulfillmentProvider.provider}}"></md-input>
-                <md-input disabled placeholder="Username" value="{{schedule.product.fulfillmentProvider.username}}"></md-input>
-                <md-input disabled placeholder="Password" value="{{schedule.product.fulfillmentProvider.password}}"></md-input>
-                <md-input disabled placeholder="Endpoint" value="{{schedule.product.fulfillmentProvider.endpoint}}"></md-input>
-              </div>
-            </div>
-          </div>
-          </ng-container>
-        </ng-container>
-      </div>
-    </div>
+<md-card class="entity-view__card" *ngIf="entity">
+  <md-card-title class="entity-view__card__title"> <span>{{mode}} Transaction</span> </md-card-title>
+  <md-card-content class="entity-view__card__content">
+    <md-input [disabled]="viewMode" placeholder="Date" [(ngModel)]="entity.date"></md-input>
+    <md-input [disabled]="viewMode" placeholder="Amount" [(ngModel)]="entity.amount"></md-input>
+    <md-input [disabled]="viewMode" placeholder="Processor Response Message" [(ngModel)]="entity.processorResponse.message"></md-input>
   </md-card-content>
+  <md-card-actions align="end">
+    <button md-raised-button color="primary" *ngIf="addMode" (click)="saveEntity(entity)">Save</button>
+    <button md-raised-button color="primary" *ngIf="updateMode" (click)="updateEntity(entity)">Save</button>
+    <button md-raised-button color="primary" *ngIf="updateMode" (click)="cancelUpdate()">Cancel</button>
+  </md-card-actions>
 </md-card>
