--- a/template/core-dist/src/app/pages/transactions-page/transactions.component.html
+++ b/template/core-dist/src/app/pages/transactions-page/transactions.component.html
@@ -1,33 +1,38 @@
-<button md-fab class="entity-index__button--add"> <md-icon>add</md-icon></button>
+<md-card class="entity-index__card">
+  <md-card-title class="entity-index__card__title"> <span>Transactions Index</span> </md-card-title>
+  <md-card-content class="entity-index__card__content">
+    <button md-raised-button color="primary" (click)="addEntity()">New Transaction</button>
 
-<div class="entity-index__search">
-  <md-input placeholder="search"></md-input>
-  <button md-raised-button color="primary">search</button>
-</div>
+    <div class="entity-index__search">
+      <md-input placeholder="search"></md-input>
+      <button md-raised-button color="primary">search</button>
+    </div>
 
-<table class="highlight">
-  <thead class="entity-index__table__header">
-  <tr>
-    <th data-field="id">ID</th>
-    <th data-field="data">Date</th>
-    <th data-field="amount">Amount</th>
-    <th data-field="processorResponse">Processor Response</th>
-    <th>Actions</th>
-  </tr>
-  </thead>
+    <table class="entity-index__table highlight">
+      <thead class="entity-index__table__header">
+        <tr>
+          <th data-field="id">ID <md-icon>keyboard_arrow_down</md-icon></th>
+          <th data-field="data">Date <md-icon>keyboard_arrow_down</md-icon></th>
+          <th data-field="amount">Amount <md-icon>keyboard_arrow_down</md-icon></th>
+          <th data-field="processorResponse">Processor Response <md-icon>keyboard_arrow_down</md-icon></th>
+          <th>Actions</th>
+        </tr>
+      </thead>
 
-  <tbody>
-  <tr *ngFor="let transaction of transactions">
-    <td>{{transaction.id}}</td>
-    <td>{{transaction.date}}</td>
-    <td>{{transaction.amount}}</td>
-    <td>{{transaction.processorResponse.message}}</td>
-    <td>
-      <md-icon class="entity-index__table__body__action" (click)="viewEntity(transaction.id)">visibility</md-icon>
-      <md-icon class="entity-index__table__body__action" (click)="updateEntity(transaction.id)">mode_edit</md-icon>
-      <md-icon class="entity-index__table__body__action" (click)="deleteEntity(transaction.id)">delete</md-icon>
-    </td>
-  </tr>
-  </tbody>
+      <tbody>
+      <tr *ngFor="let transaction of transactions">
+        <td>{{transaction.id}}</td>
+        <td>{{transaction.date}}</td>
+        <td>{{transaction.amount}}</td>
+        <td>{{transaction.processorResponse.message}}</td>
+        <td>
+          <md-icon class="entity-index__table__body__action" (click)="viewEntity(transaction.id)">visibility</md-icon>
+          <md-icon class="entity-index__table__body__action" (click)="updateEntity(transaction.id)">mode_edit</md-icon>
+          <md-icon class="entity-index__table__body__action" (click)="deleteEntity(transaction.id)">delete</md-icon>
+        </td>
+      </tr>
+      </tbody>
 
-</table>
+    </table>
+  </md-card-content>
+</md-card>
