--- a/template/core-dist/src/app/navigation/sidenav/sidenav.component.html
+++ b/template/core-dist/src/app/navigation/sidenav/sidenav.component.html
@@ -1,6 +1,7 @@
 <md-toolbar color="primary">
-  <img src="/assets/images/logo.svg" class="logo">
+  <img *ngIf="isHovering" src="/assets/images/logo.svg" class="logo">
+  <img *ngIf="!isHovering" src="/assets/images/logo-small.svg" class="logo">
 </md-toolbar>
 <md-nav-list class="side-navigation" [ngStyle]="{'height': height}">
-  <c-sidenav-item *ngFor="let menuItem of menuItems" [menuItem]="menuItem" [parent]="_this"></c-sidenav-item>
+  <c-sidenav-item *ngFor="let menuItem of menuItems" [menuItem]="menuItem" [parent]="_this" [full]="isHovering"></c-sidenav-item>
 </md-nav-list>
