--- a/template/core-dist/src/app/pages/access-keys-page/access-keys.component.html
+++ b/template/core-dist/src/app/pages/access-keys-page/access-keys.component.html
@@ -15,7 +15,7 @@
   </thead>
 
   <tbody>
-  <tr *ngFor="let accessKey of accessKeys">
+  <tr *ngFor="let accessKey of entities">
     <td>{{accessKey.accessKey}}</td>
     <td>{{accessKey.secretKey}}</td>
     <td>
@@ -25,5 +25,13 @@
     </td>
   </tr>
   </tbody>
-
 </table>
+
+<div class="entity-index__pagination__buttons">
+  <button [disabled]="page <= 0" md-raised-button color="primary" (click)="previous()">previous</button>
+  <span> {{page + 1}} </span>
+  <button [disabled]="!hasMorePages()" md-raised-button color="primary" (click)="next()">next</button>
+
+  <md-input class="entity-index__pagination__buttons__limit__input" [(ngModel)]="newLimit" placeholder="Users Per Page"></md-input>
+  <button class="entity-index__pagination__buttons__limit__button" md-raised-button color="primary" (click)="updateLimit()">Update</button>
+</div>
