--- a/template/core-dist/src/app/pages/affiliates-page/affiliates.component.html
+++ b/template/core-dist/src/app/pages/affiliates-page/affiliates.component.html
@@ -23,7 +23,7 @@
       </thead>
 
       <tbody>
-      <tr *ngFor="let affiliate of affiliates">
+      <tr *ngFor="let affiliate of entities">
         <td>{{affiliate.affiliateId}}</td>
         <td>{{affiliate.subId1}}</td>
         <td>{{affiliate.subId2}}</td>
@@ -38,8 +38,16 @@
         </td>
       </tr>
       </tbody>
-
     </table>
+
+    <div class="entity-index__pagination__buttons">
+      <button [disabled]="page <= 0" md-raised-button color="primary" (click)="previous()">previous</button>
+      <span> {{page + 1}} </span>
+      <button [disabled]="!hasMorePages()" md-raised-button color="primary" (click)="next()">next</button>
+
+      <md-input class="entity-index__pagination__buttons__limit__input" [(ngModel)]="newLimit" placeholder="Users Per Page"></md-input>
+      <button class="entity-index__pagination__buttons__limit__button" md-raised-button color="primary" (click)="updateLimit()">Update</button>
+    </div>
   </md-card-content>
 </md-card>
 
