--- a/template/core-dist/src/app/pages/campaigns-page/campaigns.component.html
+++ b/template/core-dist/src/app/pages/campaigns-page/campaigns.component.html
@@ -19,7 +19,7 @@
       </thead>
 
       <tbody>
-        <tr *ngFor="let campaign of campaigns">
+        <tr *ngFor="let campaign of entities">
           <td>{{campaign.name}}</td>
           <td>{{campaign.loadBalancer.merchantProviderConfigurations.length}}</td>
           <td>{{campaign.productSchedules.length}}</td>
@@ -30,8 +30,16 @@
           </td>
         </tr>
       </tbody>
-
     </table>
+
+    <div class="entity-index__pagination__buttons">
+      <button [disabled]="page <= 0" md-raised-button color="primary" (click)="previous()">previous</button>
+      <span> {{page + 1}} </span>
+      <button [disabled]="!hasMorePages()" md-raised-button color="primary" (click)="next()">next</button>
+
+      <md-input class="entity-index__pagination__buttons__limit__input" [(ngModel)]="newLimit" placeholder="Users Per Page"></md-input>
+      <button class="entity-index__pagination__buttons__limit__button" md-raised-button color="primary" (click)="updateLimit()">Update</button>
+    </div>
   </md-card-content>
 </md-card>
 
