--- a/template/core-dist/src/app/pages/load-balancers-page/load-balancers.component.html
+++ b/template/core-dist/src/app/pages/load-balancers-page/load-balancers.component.html
@@ -18,7 +18,7 @@
       </thead>
 
       <tbody>
-      <tr *ngFor="let loadBalancer of loadBalancers">
+      <tr *ngFor="let loadBalancer of entities">
         <td>{{loadBalancer.id}}</td>
         <td>{{loadBalancer.merchantProviderConfigurations.length}}</td>
         <td>
@@ -28,7 +28,15 @@
         </td>
       </tr>
       </tbody>
-
     </table>
+
+    <div class="entity-index__pagination__buttons">
+      <button [disabled]="page <= 0" md-raised-button color="primary" (click)="previous()">previous</button>
+      <span> {{page + 1}} </span>
+      <button [disabled]="!hasMorePages()" md-raised-button color="primary" (click)="next()">next</button>
+
+      <md-input class="entity-index__pagination__buttons__limit__input" [(ngModel)]="newLimit" placeholder="Users Per Page"></md-input>
+      <button class="entity-index__pagination__buttons__limit__button" md-raised-button color="primary" (click)="updateLimit()">Update</button>
+    </div>
   </md-card-content>
 </md-card>
