--- a/template/core-dist/src/app/pages/products-page/products.component.html
+++ b/template/core-dist/src/app/pages/products-page/products.component.html
@@ -20,7 +20,7 @@
       </thead>
 
       <tbody>
-      <tr *ngFor="let product of products">
+      <tr *ngFor="let product of entities">
         <td>{{product.name}}</td>
         <td>{{product.sku}}</td>
         <td>{{product.ship}}</td>
@@ -32,7 +32,15 @@
         </td>
       </tr>
       </tbody>
-
     </table>
+
+    <div class="entity-index__pagination__buttons">
+      <button [disabled]="page <= 0" md-raised-button color="primary" (click)="previous()">previous</button>
+      <span> {{page + 1}} </span>
+      <button [disabled]="!hasMorePages()" md-raised-button color="primary" (click)="next()">next</button>
+
+      <md-input class="entity-index__pagination__buttons__limit__input" [(ngModel)]="newLimit" placeholder="Users Per Page"></md-input>
+      <button class="entity-index__pagination__buttons__limit__button" md-raised-button color="primary" (click)="updateLimit()">Update</button>
+    </div>
   </md-card-content>
 </md-card>
