--- a/template/core-dist/src/app/pages/smtp-providers-page/smtp-providers.component.html
+++ b/template/core-dist/src/app/pages/smtp-providers-page/smtp-providers.component.html
@@ -21,7 +21,7 @@
       </thead>
 
       <tbody>
-      <tr *ngFor="let smtpProvider of smtpProviders">
+      <tr *ngFor="let smtpProvider of entities">
         <td>{{smtpProvider.name}}</td>
         <td>{{smtpProvider.hostname}}</td>
         <td>{{smtpProvider.ipAddress}}</td>
@@ -35,5 +35,14 @@
       </tr>
       </tbody>
     </table>
+
+    <div class="entity-index__pagination__buttons">
+      <button [disabled]="page <= 0" md-raised-button color="primary" (click)="previous()">previous</button>
+      <span> {{page + 1}} </span>
+      <button [disabled]="!hasMorePages()" md-raised-button color="primary" (click)="next()">next</button>
+
+      <md-input class="entity-index__pagination__buttons__limit__input" [(ngModel)]="newLimit" placeholder="Users Per Page"></md-input>
+      <button class="entity-index__pagination__buttons__limit__button" md-raised-button color="primary" (click)="updateLimit()">Update</button>
+    </div>
   </md-card-content>
 </md-card>
