Make dashboard responsive.

--- a/template/core-dist/src/app/pages/dashboard-page/dashboard.component.html
+++ b/template/core-dist/src/app/pages/dashboard-page/dashboard.component.html
@@ -46,7 +46,7 @@
         <md-card-title>Fulfillments</md-card-title>
         <md-card-content>
           <div class="canvas__parent">
-            <canvas
+            <canvas class="canvas__parent--bar__canvas"
               baseChart
               [data]="pieChartData"
               [labels]="pieChartLabels"
