--- a/template/core-dist/src/app/pages/dashboard-page/dashboard.component.scss
+++ b/template/core-dist/src/app/pages/dashboard-page/dashboard.component.scss
@@ -3,24 +3,52 @@
   width: 20%;
   float: right;
   box-sizing: border-box;
+
+  @media only screen and (max-width: 1000px) {
+    width: 30%;
+  }
 }
 
 .dashboard__charts {
   width: 80%;
 
+  @media only screen and (max-width: 1000px) {
+    width: 70%;
+  }
+
   div {
+
     width: 50%;
     box-sizing: border-box;
     padding: 8px;
 
-    .canvas__parent {
-      margin: auto;
-      max-height: 280px;
+    @media only screen and (max-width: 1000px) {
+      width: 100%;
+    }
 
+    .canvas__parent {
       &--chart {
         width: 100%;
         max-height: 280px;
         padding: 8px 8px 2px 8px;
+      }
+
+      &--bar {
+        margin: auto;
+        @media only screen and (min-width: 1001px) {
+          max-height: 280px;
+        }
+
+        &__canvas {
+          width: 100% !important;
+          height: 100% !important;
+          margin: auto;
+
+          @media only screen and (max-width: 1000px) {
+            width: 80% !important;
+            height: 80% !important;
+          }
+        }
       }
     }
   }
@@ -30,12 +58,20 @@
   width: 80%;
   box-sizing: border-box;
   padding: 8px;
+
+  @media only screen and (max-width: 1000px) {
+    width: 70%;
+  }
 }
 
 .widgets {
   &__container {
     display: inline-block;
     width: 80%;
+
+    @media only screen and (max-width: 1000px) {
+      width: 70%;
+    }
   }
 
   &__wrapper {
