Change colors and redesign top nav bar.

--- a/template/core-dist/src/app/navigation/sidenav/sidenav.component.html
+++ b/template/core-dist/src/app/navigation/sidenav/sidenav.component.html
@@ -1,4 +1,4 @@
-<md-toolbar color="primary">
+<md-toolbar>
   <img *ngIf="isHovering" src="/assets/images/logo.svg" class="logo">
   <img *ngIf="!isHovering" src="/assets/images/logo-small.svg" class="logo">
 </md-toolbar>
