--- a/template/core-dist/src/app/pages/dashboard-page/dashboard.component.html
+++ b/template/core-dist/src/app/pages/dashboard-page/dashboard.component.html
@@ -1,10 +1,10 @@
 <div class="dashboard">
   <div class="widgets__container">
     <div class="flex-container layout-row layout-column-sm widgets__wrapper">
-      <core-widget icon="trending_up" [count]="367" description="New Sales" [color]="'#B8E78C'" [textColor]="'#000'"></core-widget>
-      <core-widget icon="thumb_up" [count]="28" description="Rebills" [color]="'#4C91DE'" [textColor]="'#fff'"></core-widget>
-      <core-widget icon="account_box" [count]="93" description="Refunds" [color]="'#8D31F8'" [textColor]="'#fff'"></core-widget>
-      <core-widget icon="equalizer" [count]="4" description="Canceled" [color]="'#F8E442'" [textColor]="'#000'"></core-widget>
+      <core-widget icon="trending_up" [count]="367" description="New Sales" [textColor]="'#fff'"></core-widget>
+      <core-widget icon="thumb_up" [count]="28" description="Rebills" [textColor]="'#fff'"></core-widget>
+      <core-widget icon="account_box" [count]="93" description="Refunds" [textColor]="'#fff'"></core-widget>
+      <core-widget icon="equalizer" [count]="4" description="Canceled" [textColor]="'#fff'"></core-widget>
     </div>
   </div>
 
